<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtClientName"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/app_nome_cliente"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnEditClient"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/app_edit_client_btn"
            />
        <ImageView
            android:id="@+id/btnDeleteClient"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/delete_24dp_e8eaed"
            android:contentDescription="@string/app_delte_client_btn"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>