<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_gradient"
                android:title="@string/app_name"
                android:titleTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_exit"
                android:onClick="AddClientExitToApp"
                android:src="@drawable/ic_exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/Toolbar"
                app:layout_constraintHorizontal_bias="0.952"
                app:layout_constraintStart_toStartOf="@+id/Toolbar"
                app:layout_constraintTop_toTopOf="@id/Toolbar"
                app:layout_constraintVertical_bias="0.555"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_list_client_btn"
                android:onClick="RedirectToClientList"
                android:src="@drawable/ico_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgExit"
                app:layout_constraintHorizontal_bias="0.952"
                app:layout_constraintStart_toStartOf="@+id/Toolbar"
                app:layout_constraintTop_toTopOf="@id/Toolbar"
                app:layout_constraintVertical_bias="0.555"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constratintFormClient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddClientRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <EditText
            android:id="@+id/inputClientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_name"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/constratintFormClient"
            app:layout_constraintStart_toStartOf="@+id/constratintFormClient"
            app:layout_constraintTop_toTopOf="@+id/constratintFormClient"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddClientRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_btn_login"
        android:backgroundTint="@color/background_btn_login"
        android:onClick="AddClient_Click"
        android:text="@string/app_add_client_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>